out/production/Jnotebook/batch/error_abc.txt
abc.java:5: error: not a statement
 	sdfsdf 
 	^
abc.java:5: error: ';' expected
 	sdfsdf 
 	      ^
2 errors
